fix: fix tertiary #button alignment issue

--- a/packages/dnb-eufemia/src/components/button/style/themes/dnb-button-theme-ui.scss
+++ b/packages/dnb-eufemia/src/components/button/style/themes/dnb-button-theme-ui.scss
@@ -168,12 +168,16 @@
       align-self: flex-start;
       margin-top: 0.75rem;
     }
+    &.dnb-button--size-large .dnb-button__icon,
     &.dnb-button--size-small .dnb-button__icon {
       margin-top: 0.25rem;
     }
+    &.dnb-button--size-medium .dnb-button__icon {
+      margin-top: 0.5rem;
+    }
 
     // Ensure tertiary button has medium size when size is large
-    &.dnb-button--size-large .dnb-button__icon,
+    &.dnb-button--has-text.dnb-button--size-large .dnb-button__icon,
     &:not(.dnb-button--size-large) .dnb-button__icon.dnb-icon--medium {
       margin-top: 0.5rem;
     }
@@ -294,11 +298,6 @@
       var(--color-ocean-green),
       var(--color-accent-yellow)
     );
-
-    // touch helper
-    // html[data-whatintent='touch']  &:active {
-    //   @include fakeBorder(var(--color-emerald-green), 0.125rem /*2px*/);
-    // }
 
     &[disabled] {
       color: var(--color-black-20);
